getProducts initial commit
